--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<input type="text" [(ngModel)]="name">
-<p>{{ name }}</p>
+<div class="container">
+  <div class="row">
+    <h3>I'm in the app component</h3>
+    <hr />
+    <app-servers> </app-servers>
+  </div>
+</div>
